# NewSimpleSQL

./: LICENSE  README.md  pyproject.toml  setup.py
NewSimpleSQL/: SimpleSQLite.py  serialize_data.py
NewSimpleSQL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simple_sqlite/: __init__.py
