[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NewSimpleSQL"
version = "0.5.0"
authors = [
  { name="Greem", email="ianpichardo575@gmail.com" },
]
description = "This is a library to simplify the use of a SQLite3 database, easy to use, easy to understand."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/Greem3/NewSimpleSQL"